--- a/client/src/app/components/product-list/product-list.component.html
+++ b/client/src/app/components/product-list/product-list.component.html
@@ -51,7 +51,7 @@
         <div class="d-flex justify-content-center mt-4">
           <ngb-pagination
             [collectionSize]="totalItems"
-            [(page)]="currentPage"
+            [(page)]="page"
             [pageSize]="pageSize"
             (pageChange)="loadProducts()"
           ></ngb-pagination>
