--- a/client/src/app/components/product-list/product-list.component.html
+++ b/client/src/app/components/product-list/product-list.component.html
@@ -67,7 +67,7 @@
         <h5 class="mb-0">Cart</h5>
       </div>
       <div class="card-body">
-        <div *ngIf="cart.items.length; else emptyCart">
+        <div *ngIf="cart?.items?.length; else emptyCart">
           <div *ngFor="let item of cart.items" class="d-flex justify-content-between align-items-center mb-2">
             <div>
               <span>{{ item.product.name }}</span>
@@ -83,16 +83,19 @@
           <hr>
           <div class="d-flex justify-content-between">
             <span>Subtotal:</span>
-            <span>${{ cart.subtotal.toFixed(2) }}</span>
+            <strong>${{ cart.subtotal }}</strong>
           </div>
           <div class="d-flex justify-content-between">
             <span>VAT (20%):</span>
-            <span>${{ cart.vat.toFixed(2) }}</span>
+            <strong>${{ cart.vat }}</strong>
           </div>
-          <div class="d-flex justify-content-between fw-bold mt-2">
+          <div class="d-flex justify-content-between mt-2">
             <span>Total:</span>
-            <span>${{ cart.total.toFixed(2) }}</span>
+            <strong>${{ cart.total }}</strong>
           </div>
+          <button class="btn btn-success w-100 mt-3" routerLink="/checkout">
+            Proceed to Checkout
+          </button>
         </div>
         <ng-template #emptyCart>
           <p class="text-center mb-0">Your cart is empty</p>
