--- a/client/src/app/components/product-list/product-list.component.html
+++ b/client/src/app/components/product-list/product-list.component.html
@@ -76,7 +76,7 @@
             </div>
             <div class="d-flex align-items-center">
               <input type="number" class="form-control form-control-sm me-2" style="width: 60px"
-                     [value]="item.quantity" (change)="updateQuantity(item.productId, +$event.target.value)">
+                     [value]="item.quantity" #quantityInput (change)="updateQuantity(item.productId, quantityInput.value)">
               <button class="btn btn-sm btn-danger" (click)="removeFromCart(item.productId)">×</button>
             </div>
           </div>
