--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -177,7 +177,8 @@
   }
 </style>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand" routerLink="/">E-Commerce Store</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -187,7 +188,8 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
           <a class="nav-link" routerLink="/cart">
-            Cart ({{ cartSummary.itemCount }})
+            <i class="bi bi-cart"></i> Cart
+            <span class="badge bg-primary" *ngIf="cartItemCount > 0">{{cartItemCount}}</span>
           </a>
         </li>
       </ul>
@@ -195,6 +197,7 @@
   </div>
 </nav>
 
+<!-- Main Content -->
 <div class="container mt-4">
   <router-outlet></router-outlet>
 </div>
