--- a/client/src/app/components/cart/cart.component.html
+++ b/client/src/app/components/cart/cart.component.html
@@ -1,3 +1,5 @@
+<app-error-alert></app-error-alert>
+
 <ng-container *ngIf="cart">
   <div class="row">
     <div class="col-md-8">
@@ -33,11 +35,11 @@
                     <td>${{ item.product.price }}</td>
                     <td style="width: 150px">
                       <input type="number" class="form-control" [value]="item.quantity"
-                             (change)="updateQuantity(item.productId, $event)" min="1">
+                             (change)="updateQuantity(item.id, $event)" min="1">
                     </td>
                     <td>${{ (item.product.price * item.quantity).toFixed(2) }}</td>
                     <td>
-                      <button class="btn btn-sm btn-danger" (click)="removeFromCart(item.productId)">
+                      <button class="btn btn-sm btn-danger" (click)="removeFromCart(item.id)">
                         Remove
                       </button>
                     </td>
